--- a/wp-content/themes/rethink-event/sass/01-sections/_nav.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_nav.scss
@@ -67,7 +67,10 @@
     top: 80px;
     right: 0;
     left: 0;
+    width: 100%;
+    // bottom: 0;
     max-height: 0;
+    // height: 100%;
     background-color: rgba($black, 0.9);
     z-index: 999;
     display: flex;
@@ -92,6 +95,7 @@
     ul {
       overflow: auto;
       margin-bottom: 0;
+      height: 100%;
       &:first-child {
         padding-top: 20px;
         padding-bottom: 50px;
