--- a/wp-content/themes/rethink-event/sass/style.scss
+++ b/wp-content/themes/rethink-event/sass/style.scss
@@ -16,6 +16,7 @@
 @import "01-sections/pop-up";
 @import "01-sections/profile";
 @import "01-sections/sticky-cta";
+@import "01-sections/hero";
 
 @import "02-blocks/cta";
 @import "02-blocks/space-invader";
@@ -23,6 +24,7 @@
 @import "02-blocks/programme";
 @import "02-blocks/programme-grid";
 @import "02-blocks/speakers-list";
+
 @import "03-vendor/tiny-slider.scss";
 
 @import "04-pages/single-session";
