--- a/wp-content/themes/rethink-event/sass/01-sections/_profile.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_profile.scss
@@ -22,6 +22,11 @@
       width: 100%;
       object-fit: contain;
     }
+
+    @media (min-width: $break-desktop) {
+      width: 300px;
+      height: 300px;
+    }
   }
 
   &__position {
