--- a/wp-content/themes/rethink-event/sass/01-sections/_blogs.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_blogs.scss
@@ -9,8 +9,6 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-
-    max-width: 800px;
   }
 
   @media (min-width: $break-desktop-med) {
@@ -60,12 +58,24 @@
       }
     }
   }
+
+  text-decoration: none;
+  color: black;
+  transition: color 0.4s;
+  &:hover {
+    color: $green;
+
+    img {
+      opacity: 0.7;
+    }
+  }
 }
 
 .pagination {
   display: flex;
   align-items: flex-end;
-  justify-content: space-between;
+  // justify-content: space-between;
+  justify-content: center;
 }
 .nav-previous,
 .nav-next {
@@ -76,8 +86,8 @@
     color: $green;
     text-decoration: none;
     // border-bottom: 1px solid $green;
-    padding: 0 3px;
-
+    padding: 05px 20px;
+    transition: 0.4s;
     &:hover {
       color: $white;
       background-color: $green;
@@ -86,5 +96,5 @@
 }
 
 .nav-next {
-  align-self: flex-end;
+  // align-self: flex-end;
 }
