--- a/wp-content/themes/rethink-event/sass/00-base/_typography.scss
+++ b/wp-content/themes/rethink-event/sass/00-base/_typography.scss
@@ -69,9 +69,10 @@ h3 {
 }
 
 h4 {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.3;
+  margin-bottom: 10px;
 }
 
 h5 {
