--- a/wp-content/themes/rethink-event/sass/00-base/_typography.scss
+++ b/wp-content/themes/rethink-event/sass/00-base/_typography.scss
@@ -70,13 +70,16 @@ h3 {
 
 h4 {
   font-size: 18px;
-  font-weight: 400;
+  font-weight: bold;
   line-height: 1.3;
   margin-bottom: 10px;
+  @media (min-width: $break-desktop) {
+    font-size: 22px;
+  }
 }
 
 h5 {
-  font-size: 19px;
+  font-size: 18px;
   font-weight: 500;
   line-height: 1.3;
 }
