--- a/wp-content/themes/rethink-event/sass/04-pages/_single-session.scss
+++ b/wp-content/themes/rethink-event/sass/04-pages/_single-session.scss
@@ -1,58 +1,88 @@
 .pg-single-session {
-    @include link-plain;
+  @include link-plain;
 }
 
 .pg-single-session__back-btn {
-    a {
-        margin-bottom: 30px;
-        @include font-size(18);
-        background-color: $green;
-        display: inline-block;
-        padding: 6px 8px;
-        cursor: pointer;
-        font-weight: bold;
-        color: $white;
-        text-decoration: none;
-        transition: 0.4s;
-        &:hover {
-            background-color: $yellow;
-            color: $black;
-        }
+  a {
+    margin-bottom: 30px;
+    @include font-size(18);
+    background-color: $green;
+    display: inline-block;
+    padding: 6px 8px;
+    cursor: pointer;
+    font-weight: bold;
+    color: $white;
+    text-decoration: none;
+    transition: 0.4s;
+
+    &:hover {
+      background-color: $yellow;
+      color: $black;
     }
+  }
+}
+
+.pg-single-session__top-bar {
+  margin-bottom: 30px;
+  @media (min-width: $break-desktop-med) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.pg-single-session__location {
+  margin-top: 15px;
+  @media (min-width: $break-desktop-med) {
+    margin-top: 0;
+  }
+}
+
+.pg-single-session__location-link {
+  @include colour_pick;
+  @include link-block;
 }
 
 .pg-single-session__section {
-    margin-bottom: 30px;
-    @media (min-width: $break-desktop) {
-        margin-bottom: 50px;
-    }
+  margin-bottom: 30px;
+  @media (min-width: $break-desktop) {
+    margin-bottom: 50px;
+  }
 }
 
 .pg-single-session__sdgs {
-    display: flex;
+  display: flex;
 }
 
 .pg-single-session__sdg {
-    width: 60px;
-    margin-right: 15px;
+  width: 60px;
+  margin-right: 15px;
+  @media (min-width: $break-desktop) {
+    width: 100px;
+    margin-right: 20px;
+  }
+
+  @media (min-width: $break-desktop-med) {
+    width: 130px;
+    margin-right: 25px;
+  }
 }
 
 .pg-single-session__img-flex {
-    display: flex;
-    flex-wrap: wrap;
-    // justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: space-between;
 }
 .pg-single-session__img-flex-item {
-    width: 45%;
-    max-width: 270px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    &__img {
-        margin-bottom: 5px;
-    }
-    p {
-        margin-bottom: 5px;
-    }
+  width: 45%;
+  max-width: 270px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  &__img {
+    margin-bottom: 5px;
+  }
+  p {
+    margin-bottom: 5px;
+  }
 }
 
 .pg-single-session__sponsers {
