--- a/wp-content/themes/rethink-event/sass/05-template/_hero.scss
+++ b/wp-content/themes/rethink-event/sass/05-template/_hero.scss
@@ -2,14 +2,15 @@
 .t-hero-simple {
   margin-top: 0px;
   @media (min-width: $break-desktop) {
-    margin-top: 60px;
+    margin-top: 80px;
+    margin-bottom: 60px;
   }
 }
 
 .t-hero {
   width: 100%;
   color: $black;
-  // padding: 10px 0 30px;
+
   margin-bottom: 10px;
   position: relative;
   @media (min-width: $break-desktop) {
