--- a/wp-content/themes/rethink-event/sass/01-sections/_sticky-cta.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_sticky-cta.scss
@@ -1,30 +1,32 @@
 .sticky-cta {
-    display: inline-block;
-  
+  display: inline-block;
+
   text-align: center;
-    background-color: $green;
-    padding: 10px 20px 10px 10px;
-    text-decoration: none;
-    color: $white;
-    text-transform: uppercase;
-    font-weight: bold;
-    transition: 0.4s;
+  background-color: $green;
+  padding: 10px 20px 10px 10px;
+  text-decoration: none;
+  color: $white;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: 0.4s;
+  width: 100%;
 
+  @media (min-width: $break-desktop) {
+    display: inline;
+    width: unset;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    z-index: 1;
+  }
 
-    @media (min-width: $break-desktop){
-        position: absolute;
-        top: 100px;
-        right: 0;
-        z-index: 1;
-    }
+  &:hover {
+    background-color: $grey;
+    color: $green;
+  }
 
-    &:hover {
-        background-color: $grey;
-        color: $green;
-    }
-
-    @media (min-width: $break-desktop) {
-        position: fixed;
-        font-size: 18px;
-    }
+  @media (min-width: $break-desktop) {
+    position: fixed;
+    font-size: 18px;
+  }
 }
