create a sandbox template for sketching progrid

--- a/wp-content/themes/rethink-event/sass/style.scss
+++ b/wp-content/themes/rethink-event/sass/style.scss
@@ -37,6 +37,8 @@
 @import "05-template/sessions-link.scss";
 @import "05-template/hero";
 
+@import "progrid";
+
 //fix for wp toolbar when logged in
 body.logged-in .nav-wrapper {
   top: 32px;
