--- a/wp-content/themes/rethink-event/sass/01-sections/_footer.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_footer.scss
@@ -11,7 +11,6 @@
   max-width: 1200px;
   margin: 0 auto;
 
-
   padding: 30px 0 45px;
   display: flex;
   flex-direction: column-reverse;
@@ -38,8 +37,8 @@
     color: $green;
     width: 280px;
     margin: 0 auto;
-    @media (min-width: $break-tablet){
-     width: unset;
+    @media (min-width: $break-tablet) {
+      width: unset;
     }
   }
 
@@ -83,7 +82,7 @@
     margin-bottom: 20px;
     a {
       color: $green;
-      text-decoration: none;
+      // text-decoration: none;
       transition: 0.4s;
       &:hover {
         color: $yellow;
