--- a/wp-content/themes/rethink-event/sass/01-sections/_footer.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_footer.scss
@@ -82,7 +82,7 @@
     margin-bottom: 20px;
     a {
       color: $green;
-      // text-decoration: none;
+      text-decoration: none;
       transition: 0.4s;
       &:hover {
         color: $yellow;
