--- a/wp-content/themes/rethink-event/sass/style.scss
+++ b/wp-content/themes/rethink-event/sass/style.scss
@@ -36,6 +36,7 @@
 @import "05-template/sdgs.scss";
 @import "05-template/sessions-link.scss";
 @import "05-template/hero";
+@import "05-template/link";
 
 @import "progrid";
 
