--- a/wp-content/themes/rethink-event/sass/01-sections/_fp-hero.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_fp-hero.scss
@@ -6,11 +6,12 @@
   position: relative;
   text-align: center;
   padding: 80px 0 30px;
-
+  margin-bottom: 30px;
   @media (min-width: $break-desktop) {
     min-height: 800px;
     height: calc(100vh - 80px);
     min-height: 450px;
+    margin-bottom: 50px;
   }
 }
 
