--- a/wp-content/themes/rethink-event/sass/01-sections/_cards.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_cards.scss
@@ -70,7 +70,6 @@
 }
 
 .s-card-logo {
-  cursor: pointer;
 
   display: flex;
   align-items: center;
@@ -79,6 +78,11 @@
     width: 100%;
     height: 100%;
     transition: transform 0.4s;
+
+  }
+
+  &--allow-pop-up{
+    cursor: pointer;
     &:hover {
       transition: transform 0.4s;
       transform: scale(1.025);
