--- a/wp-content/themes/rethink-event/sass/04-pages/_single.scss
+++ b/wp-content/themes/rethink-event/sass/04-pages/_single.scss
@@ -142,6 +142,12 @@
   }
 }
 
+.pg-single__top__right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .pg-single__titles-info {
   margin-bottom: 40px;
 }
@@ -237,21 +243,21 @@
 .pg-single--sponsor-items {
   .pg-single__logo {
     &__outline {
-      border: 4px solid $blue;
+      border: 4px solid $green;
     }
     img {
-      border: 6px solid $blue;
+      border: 6px solid $green;
     }
   }
 
   .pg-single__title {
     p {
-      color: $blue;
+      color: $white;
     }
   }
 
   .pg-single__social {
-    background-color: $blue;
+    background-color: $green;
 
     &:hover {
       background-color: $white;
