--- a/wp-content/themes/rethink-event/sass/01-sections/_cards.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_cards.scss
@@ -24,9 +24,10 @@
   box-shadow: 0px 10px 13px -7px #b1b1b1, -21px 4px 15px 0px rgba(0, 0, 0, 0);
   overflow: hidden;
   &--xlarge {
+    padding: 0;
     width: 100%;
-    max-width: 600px;
-    margin: 0 auto 50px;
+    // max-width: 800px;
+    margin: 0 auto 100px;
   }
 
   &--large {
@@ -70,7 +71,6 @@
 }
 
 .s-card-logo {
-
   display: flex;
   align-items: center;
   img {
@@ -78,10 +78,9 @@
     width: 100%;
     height: 100%;
     transition: transform 0.4s;
-
   }
 
-  &--allow-pop-up{
+  &--allow-pop-up {
     cursor: pointer;
     &:hover {
       transition: transform 0.4s;
@@ -111,7 +110,7 @@
   }
 
   &--speaker-items {
-    border: 1px solid red;
+    // border: 1px solid red;
   }
 }
 
