new Level3 nav, new option to hide pop-up

--- a/wp-content/themes/rethink-event/sass/01-sections/_nav.scss
+++ b/wp-content/themes/rethink-event/sass/01-sections/_nav.scss
@@ -15,6 +15,7 @@
   right: 0;
   width: 100%;
   z-index: 9;
+
 }
 
 .nav {
@@ -26,23 +27,6 @@
   width: 90%;
   max-width: 1300px;
   margin: 0 auto;
-
-  &__logo {
-    width: 160px;
-    min-width: 160px;
-    svg {
-      width: 100%;
-
-      .a {
-        transition: fill 0.4s;
-      }
-      &:hover {
-        .a {
-          fill: $yellow;
-        }
-      }
-    }
-  }
 
   @keyframes slide-down {
     from {
@@ -62,223 +46,149 @@
     }
   }
 
-  &__menu-mobile {
-    position: absolute;
-    top: 80px;
-    right: 0;
-    left: 0;
+}
+
+.nav__logo {
+  width: 160px;
+  min-width: 160px;
+  svg {
     width: 100%;
-    // bottom: 0;
-    max-height: 0;
-    // height: 100%;
-    background-color: rgba($black, 0.9);
-    z-index: 999;
-    display: flex;
-    flex-direction: column;
 
-    // justify-content: center;
-
-    overflow: hidden;
-
-    &--show {
-      animation: slide-down 0.6s forwards;
+    .a {
+      transition: fill 0.4s;
     }
-
-    &--hide {
-      animation: slide-up 0.6s forwards;
-    }
-
-    @media (min-width: 980px) {
-      display: none;
-    }
-
-    ul {
-      overflow: auto;
-      margin-bottom: 0;
-      height: 100%;
-      &:first-child {
-        padding-top: 20px;
-        padding-bottom: 50px;
-        @media (min-width: 500px) {
-          padding-top: 50px;
-          padding-bottom: 50px;
-        }
+    &:hover {
+      .a {
+        fill: $yellow;
       }
     }
-    li {
-      font-weight: 500;
-      list-style: none;
-      line-height: 1;
-      margin-bottom: 0;
-      text-transform: lowercase;
-      cursor: pointer;
-      position: relative;
-      margin-bottom: 20px;
-      a {
-        @include font-size(24);
-        color: $white;
-        text-decoration: none;
-        white-space: nowrap;
-        margin-right: 10px;
-        display: block;
-        width: 100%;
-        padding: 10px 0 10px 30px;
-        transition: color 0.4s background-color 0.4s;
+  }
+}
 
-        &:hover {
-          color: $black;
-          background-color: $yellow;
+.nav__button {
+  color: $green;
+  width: 30px;
+  cursor: pointer;
+  transition: color 0.4s;
+  &:hover {
+    color: $yellow;
+  }
 
-          @media (min-width: 980px) {
-            color: $white;
+  &--show {
+    display: block;
+  }
 
-            background-color: $green;
-          }
-        }
+  &--hide {
+    display: none;
+  }
+
+  @media (min-width: 980px) {
+    display: none;
+  }
+}
+
+.nav__menu-mobile {
+  position: absolute;
+  top: 80px;
+  right: 0;
+  left: 0;
+  width: 100%;
+  max-height: 0;
+
+  background-color: $black;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  &--show {
+    animation: slide-down 0.6s forwards;
+  }
+
+  &--hide {
+    animation: slide-up 0.6s forwards;
+  }
+
+  @media (min-width: 980px) {
+    display: none;
+  }
+
+  ul {
+
+    overflow: auto;
+    margin-bottom: 0;
+    height: 100%;
+    &:first-child {
+      padding-top: 20px;
+      padding-bottom: 50px;
+      @media (min-width: 500px) {
+        padding-top: 50px;
+        padding-bottom: 50px;
+      }
+    }
+  }
+
+  li {
+    font-weight: 500;
+    list-style: none;
+    line-height: 1;
+    margin-bottom: 0;
+    text-transform: lowercase;
+    cursor: pointer;
+    position: relative;
+    margin-bottom: 20px;
+
+    a {
+      @include font-size(24);
+      color: $white;
+      text-decoration: none;
+      white-space: nowrap;
+      margin-right: 10px;
+      display: block;
+      width: 100%;
+      padding: 10px 0 10px 20px;
+      transition: color 0.4s background-color 0.4s;
+
+      &:hover {
+        color: $black;
+        background-color: $yellow;
 
         @media (min-width: 980px) {
-          @include font-size(16);
-          margin-left: 20px;
-        }
-      }
-    }
-
-    .current-menu-item {
-      a {
-        color: $yellow;
-      }
-      ul a {
-        color: $white !important;
-        &:hover {
-          color: $black !important;
-        }
-      }
-    }
-  }
-
-  &__menu-desktop {
-    display: none;
-    @media (min-width: 980px) {
-      display: block;
-      position: static;
-      z-index: 5;
-      height: auto;
-      background-color: transparent;
-      overflow: initial;
-      max-height: initial;
-
-      ul {
-        overflow: unset;
-        display: flex;
-        align-items: center;
-        margin-bottom: 0;
-      }
-
-      li {
-        font-weight: 500;
-        list-style: none;
-        line-height: 1;
-        margin-bottom: 0;
-        text-transform: lowercase;
-        cursor: pointer;
-        position: relative;
-
-        display: inline;
-        @include font-size(16);
-
-        //bold for New for 2021 li
-        + .page-item-85 {
-          a {
-            font-weight: bold;
-          }
-        }
-
-        a {
-          @include font-size(16);
-
           color: $white;
-          text-decoration: none;
-          white-space: nowrap;
-          margin-left: 20px;
-          margin-right: 10px;
 
-          display: block;
-          width: 100%;
-          text-align: center;
-          padding: 10px 0;
-          transition: color 0.4s background-color 0.4s;
-
-          &:hover {
-            color: $white;
-            background-color: $green;
-          }
+          background-color: $green;
         }
       }
-    }
 
-    .current-menu-item {
-      a {
-        color: $yellow !important;
-        &:hover {
-          color: $black !important;
-        }
-      }
-      ul a {
-        color: $white !important;
-        &:hover {
-          color: $black !important;
-        }
+      @media (min-width: 980px) {
+        @include font-size(16);
+        margin-left: 20px;
       }
     }
   }
 
-  &__button {
-    color: $green;
-    width: 30px;
-    cursor: pointer;
-    transition: color 0.4s;
-    &:hover {
+  .current-menu-item {
+    a {
       color: $yellow;
     }
-
-    &--show {
-      display: block;
+    ul a {
+      color: $white !important;
+      &:hover {
+        color: $black !important;
+      }
     }
-
-    &--hide {
-      display: none;
-    }
-
-    @media (min-width: 980px) {
-      display: none;
-    }
-  }
-
-  &__hamburger {
-  }
-
-  &__close {
   }
 
   .sub-menu {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
-    @media (min-width: 980px) {
-      position: absolute;
-      left: 20px;
-      max-height: 0px;
-      overflow: hidden;
-      background-color: $green;
-      transition: max-height 0.2s ease-in-out;
-    }
-
+    overflow: hidden;
     li {
       display: block;
       width: 100%;
       margin: 0;
-      padding: 3px 20px 3px 0px;
+      padding: 3px 0px 3px 0px;
       font-weight: 300;
       &:hover {
         background-color: $yellow;
@@ -288,26 +198,17 @@
       }
 
       @media (min-width: 980px) {
-        // filter: brightness(0.8);
         background-color: $green;
-
-        &:hover {
-          // filter: brightness(1);
-        }
       }
 
       a,
       a:link,
       a:visited {
         width: unset;
-
         @include font-size(19);
-        // text-align: right;
-
         margin-left: 20px;
-        // &:before {
-        //   content: "- ";
-        // }
+        white-space: normal;
+        line-height: 1.1;
 
         &:hover {
           color: $black;
@@ -320,10 +221,200 @@
           background-color: transparent;
         }
       }
+
+      // 3rd Level Menu
+      ul{
+        li{
+          a{
+
+            padding: 10px 0 10px 30px;
+            &:before {
+              content: "- ";
+            }
+
+          }
+        }
+      }
     }
 
     &--hover {
-      border: 1px solid #ff0000;
+
+    }
+
+    li a:link {
+      line-height: 1.6;
+      padding: 5px 6px 5px 30px;
+    }
+  }
+}
+
+// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
+// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
+// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
+// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
+// DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV --- DESKTOP NAV ---
+
+.nav__menu-desktop {
+  display: none;
+  @media (min-width: 980px) {
+    display: block;
+    position: static;
+    z-index: 5;
+    height: auto;
+    background-color: transparent;
+    overflow: initial;
+    max-height: initial;
+  }
+
+  .current-menu-item {
+    a {
+      color: $yellow !important;
+      &:hover {
+        color: $black !important;
+      }
+    }
+    ul a {
+      color: $white !important;
+      &:hover {
+        color: $black !important;
+      }
+    }
+  }
+}
+
+
+// Level 1 --- Level 1 --- Level 1 ---
+// Level 1 --- Level 1 --- Level 1 ---
+// Level 1 --- Level 1 --- Level 1 ---
+
+.nav__menu-desktop  ul {
+  overflow: unset;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0;
+}
+
+.nav__menu-desktop ul li {
+  font-weight: 500;
+  list-style: none;
+  line-height: 1;
+  margin-bottom: 0;
+  text-transform: lowercase;
+  cursor: pointer;
+  position: relative;
+
+  display: inline;
+  @include font-size(16);
+
+  //bold for New for 2021 li
+  + .page-item-85 {
+    a {
+      font-weight: bold;
+    }
+  }
+
+  a {
+    @include font-size(16);
+    color: $white;
+    text-decoration: none;
+    white-space: nowrap;
+    margin-left: 20px;
+    margin-right: 10px;
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    transition: color 0.4s background-color 0.4s;
+  }
+}
+
+
+// Level 2 --- Level 2 --- Level 2 ---
+// Level 2 --- Level 2 --- Level 2 ---
+// Level 2 --- Level 2 --- Level 2 ---
+
+.nav__menu-desktop  ul li ul {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: absolute;
+  z-index: 999;
+  left: 20px;
+  opacity: 0;
+  background-color: $green;
+  transition: opacity 0.3s ease-in-out;
+  min-width: 130px;
+
+}
+
+.nav__menu-desktop ul li ul li {
+
+  display: block;
+  width: 100%;
+  margin: 0;
+  font-weight: 300;
+  background-color: $green;
+
+  a {
+    width: unset;
+    line-height: 1.1;
+    margin: 0;
+    padding: 10px 20px;
+    &:hover {
+      color: $black;
+      background-color: $yellow !important;
+    }
+      @include font-size(16);
+      text-align: left;
+      color: $white;
+  }
+  &:last-child{
+    padding-bottom: 10px;
+  }
+
+}
+
+// Level 3 --- Level 3 --- Level 3 ---
+// Level 3 --- Level 3 --- Level 3 ---
+// Level 3 --- Level 3 --- Level 3 ---
+.nav__menu-desktop ul li ul li ul{
+
+  position: static;
+   top: 10px;
+}
+
+.nav__menu-desktop ul li ul li ul li{
+
+  // margin:  0 0 0 -20px;
+  a{
+    color: $white !important;
+    // padding: 10px 0 10px 30px;
+    &:before {
+      content: "- ";
+    }
+
+    &:hover {
+      color: $black !important;
+
+    }
+
+  }
+}
+
+
+// HOVER DONE HERE --- // HOVER DONE HERE --- // HOVER DONE HERE ---
+// HOVER DONE HERE --- // HOVER DONE HERE --- // HOVER DONE HERE ---
+// HOVER DONE HERE --- // HOVER DONE HERE --- // HOVER DONE HERE ---
+
+.nav__menu-desktop ul li{
+  &:hover{
+    a {
+      color: $white;
+      background-color: $green;
+    }
+    ul {
+      opacity: 1;
     }
   }
 }
