remove old blocks

--- a/wp-content/themes/rethink-event/sass/00-base/_typography.scss
+++ b/wp-content/themes/rethink-event/sass/00-base/_typography.scss
@@ -87,10 +87,11 @@ h5 {
 p {
   font-size: 16px;
   font-weight: 200;
-  line-height: 1.4;
+  line-height: 1.5;
   margin-bottom: 15px;
   @media (min-width: 767px) {
     font-size: 20px;
+    margin-bottom: 18px;
   }
 }
 
